/* Copyright 2017 Istio Authors. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

#ifndef MIXERCLIENT_ATTRIBUTE_CONVERTER_H
#define MIXERCLIENT_ATTRIBUTE_CONVERTER_H

#include <unordered_map>

#include "include/attribute.h"
#include "mixer/v1/service.pb.h"

namespace istio {
namespace mixer_client {

// Convert attributes from struct to protobuf
class AttributeConverter {
 public:
  AttributeConverter(const std::vector<std::string>& global_words);

  void Convert(const Attributes& attributes,
               ::istio::mixer::v1::Attributes* attributes_pb) const;

 private:
  std::unordered_map<std::string, int> global_dict_;
};

}  // namespace mixer_client
}  // namespace istio

#endif  // MIXERCLIENT_ATTRIBUTE_CONVERTER_H
